[package]
name = "readr"
version = "0.1.0"
edition = "2024"
description = "File reader"
license = "BSD-3-Clause"
repository = "https://github.com/kyclark/readr"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]

[dependencies]
anyhow = "1.0.96"
cargo-release = "0.25.17"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
